--- a/index.html
+++ b/index.html
@@ -1138,16 +1138,16 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+			      <li><a href="#"><i class="fa linkedin"></i></a></li>
+			      <li><a href="#"><i class="fa github"></i></a></li>
+			      <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			      <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
 			   </ul> 
 	      		
 	      </div>
 
-      	<div class="col-eight tab-full">
+      	<!-- <div class="col-eight tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2018 </span> 
 		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
@@ -1157,14 +1157,14 @@
 
 	      	<div id="go-top">
 		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
-		      </div>
+		      </div> -->
 
       	</div> <!-- /row -->     	
-   </footer>  
+   <!-- </footer>  
 
    <div id="preloader"> 
     	<div id="loader"></div>
-   </div> 
+   </div>  -->
 
    <!-- Java Script
    ================================================== --> 
