--- a/index.html
+++ b/index.html
@@ -29,7 +29,41 @@
    <!-- favicons
 	================================================== -->
 	<!-- <link rel="icon" type="image/png" href="favicon.png"> -->
-
+	<style>
+        body {
+            background-color: #000;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+        .skills-container {
+            text-align: center;
+        }
+        .skills-container h1 {
+            margin-bottom: 20px;
+        }
+        .skill {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px;
+            background-color: #333;
+            border-radius: 10px;
+            transition: transform 0.3s;
+            margin-bottom: 20px;
+        }
+        .skill:hover {
+            transform: scale(1.1);
+        }
+        .skill i {
+            font-size: 50px;
+            margin-bottom: 10px;
+        }
+        .skill p {
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body id="top">
@@ -50,11 +84,12 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Work Experience</a></li>
+						<!-- <li><a class="smoothscroll"  href="#Education" title="">Education</a></li> -->
 						<li><a class="smoothscroll"  href="#portfolio" title="">Projects</a></li>
 						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li>					 -->
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<!-- <li><a href="styles.html" title="">Style Demo</a></li>				 -->
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -1025,7 +1060,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<!-- <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p> -->
 
    		</div> 
    	</div> <!-- /section-intro -->
@@ -1077,7 +1112,7 @@
    		
    	</div> <!-- /contact-form -->
 
-   	<div class="row contact-info">
+   	<div class="row contact-info" style="text-align: center;">
 
    		<!-- <div class="col-four tab-full">
 
@@ -1095,7 +1130,7 @@
 
    		</div> -->
 		
-   		<div class="col-four tab-full collapse" style="text-align: center;">
+   		<div class="row contact-info" style="text-align: center; display: flex; justify-content: center; align-items: center; flex-direction: column;">
 
    			<div class="icon">
    				<i class="icon-mail"></i>
@@ -1147,17 +1182,17 @@
 	      		
 	      </div>
 
-      	<!-- <div class="col-eight tab-full">
+      	<div class="col-eight tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2018 </span> 
 		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
 		        	<span>Distributed by <a href="https://themewagon.com/">themewagon</a></span>	         	
 		         </div>		                  
-	      	</div>
+	      	 </div>
 
 	      	<div id="go-top">
 		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
-		      </div> -->
+		      </div> 
 
       	</div> <!-- /row -->     	
    <!-- </footer>  
