--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					<div class="col-md-2">
 						<div class="skill">
 							<i class="devicon-docker-plain"></i>
-							<p>Dcoker</p>
+							<p>Docker</p>
 						</div>
 					</div>
 					<div class="col-md-2">
